--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- Main Content Section -->
     <main>
         <div class="content">
-            <h2>Welcome to the Vibrant World! Added</h2>
+            <h2>Welcome to the Vibrant World! New code </h2>
             <p>Discover the world of colors, animations, and vibrant designs! This is just a sample HTML page with vibrant colors and modern styling.</p>
             <button class="btn">Explore More</button>
         </div>
