--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <main>
         <div class="content">
             <h2>GitHub Actions CICD Demo </h2>
-            <p>Discover the world of colors, animations, and vibrant designs! This is just a sample HTML page with vibrant colors and modern styling.</p>
+            <p>DevOps Team.</p>
             <button class="btn">Explore More</button>
         </div>
         <div class="animated-text">Stay Awesome!</div>
