--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     <main>
         <div class="content">
             <h2>GitHub Actions CICD Demo </h2>
-            <p>DevOps Team.</p>
-            <button class="btn">Explore More</button>
+            <p>DevOps</p>
+            <button class="btn">GitHub Actions</button>
         </div>
-        <div class="animated-text">Stay Awesome!</div>
+        <div class="animated-text">Stay New Try!</div>
     </main>
 
     <!-- Footer Section -->
