--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- Main Content Section -->
     <main>
         <div class="content">
-            <h2>GitHub Actions Demo</h2>
+            <h2>Demo by us</h2>
             <p>DevOps</p>
             <button class="btn">GitHub Actions</button>
         </div>
